Dev/src/OrgChartPlus/objects/MSO_OrgChart2TeamMember__c.object
<CustomObject>
    <description>Global selling team info</description>
    <fields>
        <fullName>ChartPosX__c</fullName>
        <label>ChartPosX</label>
        <precision>16</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChartPosY__c</fullName>
        <label>ChartPosY</label>
        <precision>16</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor</label>
        <referenceTo>SM_Competitor__c</referenceTo>
        <relationshipLabel>MSO OrgChart TeamMembers</relationshipLabel>
        <relationshipName>MSO_OrgChart_TeamMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>MSO OrgChart TeamMembers</relationshipLabel>
        <relationshipName>MSO_OrgChart_TeamMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DisplayOrder__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DisplayOrder</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MoleculePosX__c</fullName>
        <label>MoleculePosX</label>
        <precision>16</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MoleculePosY__c</fullName>
        <label>MoleculePosY</label>
        <precision>16</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>IF ( ISNULL( User__c )=false, User__r.FirstName + &apos; &apos; + User__r.LastName, 
IF ( ISNULL( Contact__c )=false, Contact__r.FirstName + &apos; &apos; + Contact__r.LastName, 
IF ( ISNULL( Competitor__c )=false, Competitor__r.Name, 
IF ( ISNULL( NonSFDCPerson__c )=false, NonSFDCPerson__r.Name, 
null ))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NonSFDCPerson__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Non-SFDC Person</label>
        <referenceTo>SM_NonSFUser__c</referenceTo>
        <relationshipLabel>MSO OrgChart TeamMembers</relationshipLabel>
        <relationshipName>MSO_OrgChart_TeamMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrgChart__c</fullName>
        <label>OrgChart</label>
        <referenceTo>MSO_OrgChart2__c</referenceTo>
        <relationshipLabel>MSO OrgChart TeamMembers</relationshipLabel>
        <relationshipName>MSO_OrgChart_TeamMembers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ShowFlags__c</fullName>
        <label>ShowFlags</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MSO_OrgChart_TeamMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>MSO OrgChart TeamMember</label>
    <nameField>
        <displayFormat>MOT-{00000000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MSO OrgChart TeamMembers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>